--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,8 @@
     "@babel/eslint-parser": "^7.12.1",
     "@next/eslint-plugin-next": "^10.0.4",
     "@tailwindcss/forms": "^0.4.0",
+    "@types/node": "^18.6.1",
+    "@types/react": "^18.0.15",
     "autoprefixer": "^10.4.2",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.17.0",
@@ -28,6 +30,7 @@
     "eslint-plugin-react": "^7.22.0",
     "postcss": "^8.4.6",
     "prettier": "2.2.1",
-    "tailwindcss": "^3.0.22"
+    "tailwindcss": "^3.0.22",
+    "typescript": "^4.7.4"
   }
 }
