chore: config mantine

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -20,7 +20,8 @@
     "jsx": "preserve",
     "paths": {
         "@/*": ["./*"]
-    }
+    },
+    "moduleResolution": "node"
   },
   "include": [
     "next-env.d.ts",
