--- a/web/package.json
+++ b/web/package.json
@@ -8,7 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/server": "^11.4.0",
     "@headlessui/react": "^1.4.2",
+    "@mantine/core": "^5.0.0",
+    "@mantine/hooks": "^5.0.0",
+    "@mantine/next": "^5.0.0",
     "axios": "^0.21.1",
     "next": "^12.0.4",
     "react": "^17.0.2",
