refactor: migrate components to typescript

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -19,7 +19,13 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "paths": {
-        "@/*": ["./*"]
+        "@/*": ["./*"],
+        "@app/*": ["./app/*"],
+        "@components/*": ["./components/*"],
+        "@features/*": ["./features/*"],
+        "@hooks/*": ["./hooks/*"],
+        "@middlewares/*": ["./middlewares/*"],
+        "@utils/*": ["./utils/*"],
     },
     "moduleResolution": "node"
   },
