--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "@mantine/core": "^5.0.0",
     "@mantine/hooks": "^5.0.0",
     "@mantine/next": "^5.0.0",
+    "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.21.1",
     "next": "^12.0.4",
     "react": "^17.0.2",
