--- a/web/package.json
+++ b/web/package.json
@@ -17,8 +17,7 @@
     "axios": "^0.21.1",
     "next": "^12.0.4",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "swr": "^0.3.11"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.12.1",
