--- a/web/package.json
+++ b/web/package.json
@@ -24,13 +24,19 @@
     "@next/eslint-plugin-next": "^10.0.4",
     "@types/node": "^18.6.1",
     "@types/react": "^18.0.15",
+    "@typescript-eslint/eslint-plugin": "^5.33.0",
+    "@typescript-eslint/parser": "^5.33.0",
     "autoprefixer": "^10.4.2",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.17.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-next": "^0.0.0",
     "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.6",
     "prettier": "2.2.1",
     "typescript": "^4.7.4"
