--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "root": true,
-  "parser": "babel-eslint",
+  "parser": "@typescript-eslint/parser",
   "env": {
     "node": true,
     "browser": true,
@@ -10,8 +10,8 @@
   "extends": [
     "plugin:react/recommended",
     "airbnb",
-    "eslint:recommended",
-    "plugin:react/recommended",
+    "plugin:@typescript-eslint/recommended",
+    "prettier/@typescript-eslint",
     "plugin:prettier/recommended"
   ],
   "parserOptions": {
@@ -44,6 +44,7 @@
     "react/react-in-jsx-scope": "off",
     "consistent-return": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
-    "react/function-component-definition": "off"
+    "react/function-component-definition": "off",
+    "import/no-unresolved": "off"
   }
 }
