--- a/web/package.json
+++ b/web/package.json
@@ -13,11 +13,13 @@
     "@mantine/core": "^5.0.0",
     "@mantine/hooks": "^5.0.0",
     "@mantine/next": "^5.0.0",
+    "@mantine/notifications": "^5.1.0",
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.21.1",
     "next": "^12.0.4",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-redux": "^8.0.2"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.12.1",
