--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -19,20 +19,19 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "paths": {
-        "@/*": ["./*"],
-        "@app/*": ["./app/*"],
-        "@components/*": ["./components/*"],
-        "@features/*": ["./features/*"],
-        "@hooks/*": ["./hooks/*"],
-        "@middlewares/*": ["./middlewares/*"],
-        "@utils/*": ["./utils/*"],
+      "@app/*": ["./app/*"],
+      "@components/*": ["./components/*"],
+      "@features/*": ["./features/*"],
+      "@hooks/*": ["./hooks/*"],
+      "@middlewares/*": ["./middlewares/*"],
+      "@utils/*": ["./utils/*"],
     },
     "moduleResolution": "node"
   },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
   ],
   "exclude": [
     "node_modules"
