--- a/web/package.json
+++ b/web/package.json
@@ -16,9 +16,10 @@
     "@mantine/notifications": "^5.1.0",
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.21.1",
-    "next": "^12.0.4",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "eslint-config-next": "^13.0.6",
+    "next": "^13.0.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-redux": "^8.0.2"
   },
   "devDependencies": {
